--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,12 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.10.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.fxmisc.richtext/richtextfx -->
+		<dependency>
+			<groupId>org.fxmisc.richtext</groupId>
+			<artifactId>richtextfx</artifactId>
+			<version>0.7-M3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
